--- a/test.html
+++ b/test.html
@@ -43,7 +43,7 @@
 <body>
     <a href="http://twitter.com/share?count=horizontal&amp;original_referer=https://www.zpr.co.jp/index.html&amp;text=全農パールライス50周年記念企画&amp;url=https://www.zpr.co.jp/50th/special.html" class="twitter ev_sns" onclick="window.open(this.href, 'TWwindow', 'width=650, height=500, menubar=no, toolbar=no, scrollbars=yes'); return false;"><span><img src="../shared/images/general/common/icon_twitter.svg" alt=""></span> ツイート</a>
     <br>
-    <a href="http://www.facebook.com/share.php?u=https://www.zpr.co.jp/50th/special.html" onclick="window.open(this.href, 'FBwindow', 'width=650, height=450, menubar=no, toolbar=no, scrollbars=yes'); return false;"><img src="/common/rwd/images/rn/icon_facebook.svg" width="32" height="32" alt="facebook"></a>
+    <a href="http://www.facebook.com/share.php?u=https://www.zpr.co.jp/50th/special.html" onclick="window.open(this.href, 'FBwindow', 'width=650, height=450, menubar=no, toolbar=no, scrollbars=yes'); return false;"></a>
     <br>
     <input type="button" value="このページを印刷" onclick="window.print();">
 
